[gd_scene load_steps=5 format=3 uid="uid://bco1m6ixdmiil"]

[ext_resource type="Script" path="res://scripts/card.gd" id="1_xodya"]
[ext_resource type="Texture2D" uid="uid://bdyhhj3j3u1ps" path="res://assets/Images/CardImages/Rainbow/Creature/The Pig.png" id="2_xh482"]
[ext_resource type="FontFile" uid="uid://ca0g1l1k6v1sf" path="res://assets/Fonts/Pendlefont Heavy.TTF" id="3_8dgt2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4b713"]
size = Vector2(370, 516)

[node name="Card" type="Node2D"]
scale = Vector2(0.75, 0.75)
script = ExtResource("1_xodya")

[node name="CardImage" type="Sprite2D" parent="."]
texture = ExtResource("2_xh482")

[node name="CCCost" type="CenterContainer" parent="CardImage"]
offset_left = -185.0
offset_top = -258.0
offset_right = -70.0
offset_bottom = -149.0

[node name="CostLabel" type="Label" parent="CardImage/CCCost"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_8dgt2")
theme_override_font_sizes/font_size = 50
text = "C"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CCAttack" type="CenterContainer" parent="CardImage"]
offset_left = -165.0
offset_top = 188.0
offset_right = -125.0
offset_bottom = 262.0

[node name="AttackLabel" type="Label" parent="CardImage/CCAttack"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
theme_override_fonts/font = ExtResource("3_8dgt2")
theme_override_font_sizes/font_size = 40
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CCDefense" type="CenterContainer" parent="CardImage"]
offset_left = 128.0
offset_top = 188.0
offset_right = 168.0
offset_bottom = 262.0

[node name="DefenseLabel" type="Label" parent="CardImage/CCDefense"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_8dgt2")
theme_override_font_sizes/font_size = 40
text = "D"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_4b713")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
